MEPA/TS: Adding support for VSC PHYs
Pull request #100: master.mepa.ts.vsc

--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -13,8 +13,8 @@ include_directories(../mesa/include)
 include_directories(../meba/include)
 include_directories(include)
 
-add_library(mepa_vtss SHARED src/vtss.c)
-add_library(mepa_vtss_static STATIC src/vtss.c)
+add_library(mepa_vtss SHARED src/vtss.c src/vtss_ts.c)
+add_library(mepa_vtss_static STATIC src/vtss.c src/vtss_ts.c)
 set_target_properties(mepa_vtss_static PROPERTIES OUTPUT_NAME mepa_vtss)
 
 add_library(mepa_lan8814 SHARED src/microchip/lan8814.c src/microchip/lan8814_ts.c)
