DOC: 2021.09 release note
Pull request #112: 2021.09-soak.release-note
Merge in UNGE/sw-mesa from 2021.09-soak.release-note to 2021.09-soak

Squashed commit of the following:

commit 161d93d858d5a9d4d25fd9255e298b47ae022da6
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Mon Oct 4 12:48:53 2021 +0200

    DOC: Reviewed 2021.09 release note

commit df82f7cf23066f7c253c51847f9de06b0325ae37
Author: Allan W. Nielsen <allan.nielsen@microchip.com>
Date:   Fri Oct 1 11:12:09 2021 +0200

    DOC: Starting 2021.09 release note

--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -11,6 +11,9 @@ pages:
 
     - name: "Release notes"
       pages:
+        - name: "MESA-2021.09"
+          src:  "mesa/docs/release-notes/mesa-2021.09.adoc"
+
         - name: "MESA-2021.06"
           src:  "mesa/docs/release-notes/mesa-2021.06.adoc"
 
