Laguna: Added non-FPGA lan969x target for compile purposes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,6 +275,7 @@ API_TARGET(LIB lan966x               CHIP 966X)
 API_TARGET(LIB lan966x_lm            CHIP 966X          DEFS -DVTSS_OPT_LIGHT=1 -DVTSS_OPT_TRACE=1 -DVTSS_OPT_DEBUG_PRINT=1)
 API_TARGET(LIB lan966x_ad            CHIP 966X          DEFS -DVTSS_OPT_FPGA=2)
 API_TARGET(LIB lan969x_sr            CHIP 969X          DEFS -DVTSS_OPT_FPGA=1)
+API_TARGET(LIB lan969x               CHIP 969X          DEFS)
 
 option(BUILD_MESA_CAPABILITY_DUMPER "Build all the mesa capability dumper function" OFF)
 mark_as_advanced(BUILD_MESA_CAPABILITY_DUMPER)
