Removed unused PHY code from switch API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,18 +219,18 @@ API_TARGET(LIB vsc7430               CHIP SERVAL_TE)
 API_TARGET(LIB vsc7435               CHIP SERVAL_TEP)
 API_TARGET(LIB vsc7436               CHIP SERVAL_2_LITE DEFS -DVTSS_OPT_PORT_COUNT=9)
 API_TARGET(LIB vsc7437               CHIP SERVAL_TE10)
-API_TARGET(LIB vsc7438               CHIP SERVAL_2      DEFS -DVTSS_OPT_PHY_TIMESTAMP=1)
+API_TARGET(LIB vsc7438               CHIP SERVAL_2)
 API_TARGET(LIB vsc7440               CHIP SPARX_IV_34   DEFS -DVTSS_OPT_PORT_COUNT=9)
 API_TARGET(LIB vsc7442               CHIP SPARX_IV_52)
 API_TARGET(LIB vsc7444               CHIP SPARX_IV_44)
 API_TARGET(LIB vsc7448               CHIP SPARX_IV_80   DEFS -DVTSS_OPT_PORT_COUNT=51)
 API_TARGET(LIB vsc7449               CHIP SPARX_IV_90)
 API_TARGET(LIB vsc7464               CHIP LYNX_2)
-API_TARGET(LIB vsc7468               CHIP JAGUAR_2      DEFS -DVTSS_OPT_PORT_COUNT=51 -DVTSS_OPT_PHY_TIMESTAMP=1 -DVTSS_OPT_PHY_MACSEC=1)
+API_TARGET(LIB vsc7468               CHIP JAGUAR_2      DEFS -DVTSS_OPT_PORT_COUNT=51)
 API_TARGET(LIB vsc7511               CHIP 7511          DEFS -DVTSS_OPT_PORT_COUNT=8)
 API_TARGET(LIB vsc7512               CHIP 7512)
-API_TARGET(LIB vsc7513               CHIP 7513          DEFS -DVTSS_OPT_AFI_OPTIMIZE_FOR_TIMERS=1 -DVTSS_OPT_PHY_TIMESTAMP=1)
-API_TARGET(LIB vsc7514               CHIP 7514          DEFS -DVTSS_OPT_AFI_OPTIMIZE_FOR_TIMERS=1 -DVTSS_OPT_PHY_TIMESTAMP=1)
+API_TARGET(LIB vsc7513               CHIP 7513          DEFS -DVTSS_OPT_AFI_OPTIMIZE_FOR_TIMERS=1)
+API_TARGET(LIB vsc7514               CHIP 7514          DEFS -DVTSS_OPT_AFI_OPTIMIZE_FOR_TIMERS=1)
 API_TARGET(LIB vsc7546               CHIP 7546          DEFS -DVTSS_OPT_PORT_COUNT=29)
 API_TARGET(LIB vsc7549               CHIP 7549          DEFS -DVTSS_OPT_PORT_COUNT=53)
 API_TARGET(LIB vsc7552               CHIP 7552          DEFS -DVTSS_OPT_PORT_COUNT=57)
