--- a/mepa/intel/CMakeLists.txt
+++ b/mepa/intel/CMakeLists.txt
@@ -10,6 +10,7 @@ MEPA_DRV(LIB_NAME mepa_drv_intel
 
 option(MEPA_gpy211 "Add GPY211 phy support in libmeba" OFF)
 if (${MEPA_gpy211})
-    set(mepa_drvs ${mepa_drvs} mepa_drv_intel)
-    set(mepa_defs ${mepa_defs} -DMEPA_HAS_GPY2211)
+    set(mepa_drvs ${mepa_drvs} mepa_drv_intel CACHE INTERNAL "")
+    set(mepa_defs ${mepa_defs} -DMEPA_HAS_GPY2211 CACHE INTERNAL "")
 endif()
+
