--- a/mepa/ksz9031/CMakeLists.txt
+++ b/mepa/ksz9031/CMakeLists.txt
@@ -6,6 +6,8 @@ MEPA_DRV(LIB_NAME mepa_drv_ksz9031
 
 option(MEPA_ksz9031 "Add KSZ9031 phy support in libmeba" OFF)
 if (${MEPA_ksz9031})
-    set(mepa_drvs ${mepa_drvs} mepa_drv_ksz9031)
-    set(mepa_defs ${mepa_defs} -DMEPA_HAS_KSZ9031)
+    set(mepa_drvs ${mepa_drvs} mepa_drv_ksz9031 CACHE INTERNAL "")
+    set(mepa_defs ${mepa_defs} -DMEPA_HAS_KSZ9031 CACHE INTERNAL "")
 endif()
+
+
