--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -6,9 +6,9 @@ presets:
     mipsel:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -17,31 +17,19 @@ presets:
     mipsel-debug:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
 
-    #lan966x:
-    #    :arch:             "arm64"
-    #    :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DLAN966X_ONLY=on"
-    #    :brsdk:            "2020.02.3-336"
-    #    :brsdk:            "2021.02-483"
-    #    :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-    #    :brsdk_branch:     "brsdk.lan966x-3"
-    #    :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
-    #    :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
-    #    :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
-    #    :release_artifact: true
-
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -50,9 +38,9 @@ presets:
     arm64-debug:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -60,9 +48,9 @@ presets:
     arm64-asan:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug -DBUILD_ASAN=true"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -70,9 +58,9 @@ presets:
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
@@ -81,9 +69,9 @@ presets:
     arm-debug:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02-103"
+        :brsdk:            "2021.12"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "2021.12-soak"
+        #:brsdk_branch:     "2021.12-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
