Squash merged 'master.laguna-10.auto-port-2' which adds support for 'VTSS_FEATURE_PORT_DYNAMIC' (laguna feature)

--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -186,6 +186,11 @@ pages:
             name: "Description"
           - src: "mesa/demo/examples/ts-transparent-clock.c"
 
+        - name: "Dynamic port"
+          pages:
+          - src: "mesa/docs/examples/dynamic-port.adoc"
+            name: "Description"
+
     - name: "MEBA (Board API)"
       src: "mesa/docs/meba/meba.adoc"
 
