--- a/mepa/docs/sitemap.yaml
+++ b/mepa/docs/sitemap.yaml
@@ -26,6 +26,7 @@ pages:
         - src: "mepa/docs/basic.adoc"
         - src: "mepa/docs/diag.adoc"
         - src: "mepa/docs/events.adoc"
+        - src: "mepa/docs/timestamp.adoc"
 
     - name: "MEPA API Reference"
       pages:
