ET: Added example_port_dynamic.rb and example_port_conf_bulk.rb

--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -190,6 +190,7 @@ pages:
           pages:
           - src: "mesa/docs/examples/dynamic-port.adoc"
             name: "Description"
+          - src: "mesa/demo/examples/port_dynamic.c"
 
         - name: "Port bulk configuration"
           pages:
