--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -6,9 +6,9 @@ presets:
     mipsel:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -17,9 +17,9 @@ presets:
     mipsel-debug:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -27,9 +27,9 @@ presets:
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -38,9 +38,9 @@ presets:
     arm64-debug:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -48,9 +48,9 @@ presets:
     arm64-asan:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug -DBUILD_ASAN=true"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -58,9 +58,9 @@ presets:
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
@@ -69,9 +69,9 @@ presets:
     arm-debug:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02.7-102"
+        :brsdk:            "2022.03"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "2022.03-soak"
+        #:brsdk_branch:     "2022.03-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
