--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -24,6 +24,18 @@ presets:
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
 
+    #lan966x:
+    #    :arch:             "arm64"
+    #    :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DLAN966X_ONLY=on"
+    #    :brsdk:            "2020.02.3-336"
+    #    :brsdk:            "2021.02-483"
+    #    :brsdk_arch:       "arm64-armv8_a-linux-gnu"
+    #    :brsdk_branch:     "brsdk.lan966x-3"
+    #    :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
+    #    :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
+    #    :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
+    #    :release_artifact: true
+
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
