--- a/.docker.env
+++ b/.docker.env
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Microchip Technology Inc. and its subsidiaries.
+# Copyright (c) 2004-2020 Microchip Technology Inc. and its subsidiaries.
 # SPDX-License-Identifier: MIT
 
 MCHP_DOCKER_NAME=artifacts.microchip.com:7999/ung/mesa/build-env
