--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -72,8 +72,8 @@ MEPA_LIB(LIB_NAME mepa_sparx5_bringup ADVANCED
          DRVS     mepa_drv_vtss_10g_ts)
 
 MEPA_LIB(LIB_NAME mepa_lan966x ADVANCED
-         DEFS     -DMEPA_HAS_VTSS  -DMEPA_HAS_KSZ9031  -DMEPA_HAS_LAN8814
-         DRVS     mepa_drv_vtss    mepa_drv_ksz9031    mepa_drv_lan8814)
+         DEFS     -DMEPA_HAS_VTSS  -DMEPA_HAS_KSZ9031  -D MEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x
+         DRVS     mepa_drv_vtss    mepa_drv_ksz9031    mepa_drv_lan8814   mepa_drv_lan884x)
 
 MEPA_LIB(LIB_NAME mepa_lmstax_lan966x ADVANCED
          DEFS     -DMEPA_HAS_LAN8814
