MEPA: MASEC: Implement get/set init APIs
Review-record: https://bitbucket.microchip.com/projects/UNGE/repos/sw-mesa/pull-requests/218

--- a/mepa/vtss/CMakeLists.txt
+++ b/mepa/vtss/CMakeLists.txt
@@ -4,6 +4,7 @@ set(inc_mepa ../../me/include ../include)
 
 set(src_vtss src/vtss.c
              src/vtss_ts.c
+             src/vtss_macsec.c
              src/vtss_stubs.c
              src/common/vtss_phy_common.c
              src/phy_1g/vtss_phy_init_scripts.c
