--- a/mepa/docs/sitemap.yaml
+++ b/mepa/docs/sitemap.yaml
@@ -3,7 +3,7 @@
 
 ---
 conf:
-    rel_name: "MEPA-2022.09"
+    rel_name: "MEPA-2022.12"
 
 pages:
     - name: "README"
@@ -17,6 +17,8 @@ pages:
           src:  "mepa/docs/release-notes/mepa-2022.03.adoc"
         - name: "MEPA-2022.09"
           src:  "mepa/docs/release-notes/mepa-2022.09.adoc"
+        - name: "MEPA-2022.12"
+          src:  "mepa/docs/release-notes/mepa-2022.12.adoc"
 
     - name: "Introduction"
       src:  "mepa/docs/introduction.adoc"
