--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -11,6 +11,9 @@ pages:
 
     - name: "Release notes"
       pages:
+        - name: "MESA-2022.12"
+          src:  "mesa/docs/release-notes/mesa-2022.12.adoc"
+
         - name: "MESA-2022.09"
           src:  "mesa/docs/release-notes/mesa-2022.09.adoc"
 
