MEPA/MACSEC: To achieve a stable ABI, always set MEPA_MACSEC_MAX_SA to 64
The structures in the MACsec API have embedded arrays using
MEPA_MACSEC_MAX_SA to define the size. When compiling for a 1G target,
this was set to 16, when compiling for 10G target this was set to 10G.
This causes problems in designs mixing 1G and 10G PHYs as the ABI is not
compatible.

As a tempoary fix, all compile targets now uses 64 as scaling constant.

Review-record: https://bitbucket.microchip.com/projects/UNGE/repos/sw-mesa/pull-requests/293

--- a/mepa/vtss/CMakeLists.txt
+++ b/mepa/vtss/CMakeLists.txt
@@ -58,7 +58,7 @@ MEPA_DRV(LIB_NAME mepa_drv_vtss_10g_ts
          INCL_PRI ${inc_vtss})
 
 MEPA_DRV(LIB_NAME mepa_drv_vtss_10g_macsec_ts
-         DEFS     -DVTSS_OPT_PHY_10G=1 -DVTSS_OPT_PHY_MACSEC=1 -DVTSS_OPT_PHY_TIMESTAMP=1 -DMEPA_CHIP_10G_PHY=1
+         DEFS     -DVTSS_OPT_PHY_10G=1 -DVTSS_OPT_PHY_MACSEC=1 -DVTSS_OPT_PHY_TIMESTAMP=1
          SRCS     ${src_vtss}
          INCL_PUB ${inc_mepa}
          INCL_PRI ${inc_vtss})
