Test build for macsec in fireant
Review-record: https://bitbucket.microchip.com/projects/UNGE/repos/sw-mesa/pull-requests/293

--- a/meba/CMakeLists.txt
+++ b/meba/CMakeLists.txt
@@ -123,6 +123,10 @@ MEBA_LIB(LIB_NAME ocelot_pcb121 MEBA_SRC_FOLDER ocelot_pcb121
 MEBA_LIB(LIB_NAME sparx5 MEBA_SRC_FOLDER sparx5
          STATIC_DEPENDENCIES    mepa_sparx5)
 
+MEBA_LIB(LIB_NAME sparx5_macsec MEBA_SRC_FOLDER sparx5
+         STATIC_DEPENDENCIES    mepa_sparx5_macsec)
+
+
 MEBA_LIB(LIB_NAME sparx5_bringup MEBA_SRC_FOLDER sparx5
          STATIC_DEPENDENCIES    mepa_sparx5_bringup)
 
