MEPA/LAN8770 API support for TC10, Test and SQI
Jiras:
- LAN87-107
- LAN87-87
- LAN87-101

Review-record: https://bitbucket.microchip.com/projects/UNGE/repos/sw-mesa/pull-requests/341

--- a/mepa/microchip/lan8770/CMakeLists.txt
+++ b/mepa/microchip/lan8770/CMakeLists.txt
@@ -3,6 +3,8 @@
 
 MEPA_DRV(LIB_NAME mepa_drv_lan8770
          SRCS     src/lan8770.c
+                  src/lan8770_private.c
+                  src/lan8770_tc10.c
          INCL_PUB ../../../me/include ../../include
          INCL_PRI lan8770)
 
