Fixing running in docker on checkouts using /gitref

--- a/.docker.env
+++ b/.docker.env
@@ -12,6 +12,11 @@ if [[ ! -d "$opt" ]]; then
 	exit 1
 fi
 
+gitref=""
+if [[ -d "/gitref" ]]; then
+	gitref="-v /gitref:/gitref"
+fi
+
 # Mount /tmp as tmpfs
 # Add current username and uid in environment
-MCHP_DOCKER_OPTIONS="-v $opt:$opt -v $HOME:/mapped_home --network host --tmpfs /tmp:exec -e BLD_USER=$(id -un) -e BLD_UID=$(id -u)"
+MCHP_DOCKER_OPTIONS="-v $opt:$opt -v $HOME:/mapped_home $gitref --network host --tmpfs /tmp:exec -e BLD_USER=$(id -un) -e BLD_UID=$(id -u)"
